// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button stories > renders loading state 1`] = `
<button
  class="ui-button ui-button--primary ui-button--md ui-button--loading"
  disabled=""
>
  <span
    class="ui-button__label"
  >
    Загрузка
  </span>
</button>
`;

exports[`Button stories > renders primary button 1`] = `
<button
  class="ui-button ui-button--primary ui-button--md"
>
  <span
    class="ui-button__label"
  >
    Кнопка
  </span>
</button>
`;
